--- a/about.html
+++ b/about.html
@@ -147,11 +147,20 @@
     =================================-->
       <section id="about-banner" class="banner">
         <div class="container">
-          <div class="heading-block">
-            <h1 class="hero-title">
-              Welcome to <br />
-              nguyen trong kha
-            </h1>
+          <div class="banner-wrapper">
+            <div class="banner-image">
+              <img src="./assets/images/banner/about.png" alt="About" />
+            </div>
+            <div class="heading-block">
+              <span class="badge"> Chào mừng tới: </span>
+              <h1 class="hero-title">Trọng kha</h1>
+              <ul class="list">
+                <li class="item">Doanh nhân, Diễn Giả</li>
+                <li class="item">
+                  Nhà huấn luyện kỹ năng nói trước công chúng.
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
@@ -169,27 +178,39 @@
             <div class="about-content">
               <div class="heading-block">
                 <h2 class="title">Về Trọng Kha</h2>
-                <p class="desc">
-                  Franchise Expert, Entrepreneur & Angel Investor - Chuyên gia
-                  nhượng quyền, Doanh nhân & Nhà đầu tư thiên thần
-                </p>
               </div>
               <p class="text">
-                Trọng Kha tốt nghiệp MBA tại Úc. Cô đã từng giữ các vị trí cao
-                cấp về quản trị thương hiệu, bán lẻ, nhượng quyền & phát triển
-                kinh doanh cho các tập đoàn lớn tại các khu vực thị trường châu
-                Á, Trung đông, châu Phi & Đông Âu.
+                - Doanh nhân, Diễn Giả, Nhà huấn luyện kỹ năng nói trước công
+                chúng.
               </p>
               <p class="text">
-                Phi Vân tham gia vào nhiều dự án chính phủ về phát triển doanh
-                nghiệp & kinh tế sáng tạo tại Đông Nam Á, hiện là cố vấn đề án
-                844 về phát triển hệ sinh thái khởi nghiệp Việt Nam, chủ tịch
-                mạng lưới đầu tư thiên thần Đông Nam Á, và đại diện cấp cao Việt
-                Nam tại diễn đàn đầu tư thiên thần toàn cầu.
+                - Nhà Sáng Lập – Chủ Tịch Công Ty TNHH Dịch Vụ Tổ Chức Sự Kiện
+                và Tư Vấn Phát Triển ITOSA VIETNAM
               </p>
-              <a href="#" title="Xem thêm" class="button button-solid button-m"
-                >Xem thêm</a
-              >
+              <p class="text">
+                - CO-Founder Công ty TNHH Du Lịch Và Thương Mại VIETLOTUS Travel
+              </p>
+              <p class="text">
+                - CO-Founder Câu Lạc Bộ S20 – Vì Thế Trẻ Việt Nam Tốt Hơn Mỗi
+                Ngày
+              </p>
+              <p class="text">
+                - Chủ Nhiệm Câu Lạc Bộ Những Người Yêu Sách – Phố Sách Hà Nội
+              </p>
+              <p class="text">Học Vấn:</p>
+              <p class="text">- Tốt nghiệp loại Giỏi – Đại học Hùng Vương</p>
+              <p class="text">
+                - Tốt nghiệp khoá đào tạo giảng viên kỹ năng sống tại Viện khoa
+                học công nghệ giáo dục.
+              </p>
+              <p class="text">
+                - Tốt nghiệp khoá đào tạo Trainer tại Viện khoa học công nghệ
+                giáo dục.
+              </p>
+              <p class="text">- Tốt nghiệp Trainer tại Bond Training.</p>
+              <p class="text">
+                - Tốt nghiệp MC tại Trung tâm đào tạo MC Sukha.
+              </p>
             </div>
           </div>
         </div>
@@ -239,25 +260,39 @@
     =================================-->
       <section id="about-value">
         <div class="container">
+          <div class="heading-block">
+            <h2 class="title">triết lí giáo dục VÀ GIÁ TRỊ CỐT LÕI</h2>
+          </div>
           <div class="value-content">
-            <div class="heading-block">
-              <h2 class="title">VĂN HÓA VÀ GIÁ TRỊ CỐT LÕI</h2>
+            <div class="item">
+              <div class="icon">
+                <img src="./assets/images/icons/diamond.svg  " alt="diamond" />
+              </div>
+              <h3 class="title">GIÁ TRỊ CỐT LÕI : 5T</h3>
+              <ul class="list">
+                <li class="item">- Thiện tâm & Chính trực</li>
+                <li class="item">- Tư duy làm chủ</li>
+                <li class="item">- Tốt hơn mỗi ngày</li>
+                <li class="item">- Tinh thần phụng sự</li>
+                <li class="item">- Tôn trọng người khác</li>
+              </ul>
             </div>
-            <p class="text">
-              Kết quả có được ngày hôm nay là sự nỗ lực không ngừng của ngày hôm
-              qua. Chúng tôi là một tổ chức không ngừng cố gắng, không ngừng học
-              hỏi để phát triển và liên tục tìm kiếm những cách làm mới tốt hơn
-              để tất cả cùng đi lên.
-            </p>
-            <p class="text">
-              Chúng tôi làm việc một cách tự do – độc lập nhưng không có nghĩa
-              là chúng tôi không biết cách phối hợp, huy động nguồn lực hỗ trợ
-              nhau đạt kết quả.
-            </p>
-            <p class="text">
-              Điều đó không có nghĩa là bạn cần phải tự mình hoàn thành mọi việc
-              hoặc tạo ra kịch tính và / hoặc hỗn loạn cho người khác.
-            </p>
+            <div class="item">
+              <div class="icon">
+                <img
+                  src="./assets/images/icons/lightbulb.svg  "
+                  alt="Light Bulb"
+                />
+              </div>
+              <h3 class="title">TRIẾT LÝ GIÁO DỤC:</h3>
+              <ul class="list">
+                <li class="item"><strong>THÂN - TÂM - TUỆ</strong></li>
+                <li class="item">- Khai mở nhân cách</li>
+                <li class="item">- Khai phóng tâm hồn</li>
+                <li class="item">- Khai sáng trí tuệ</li>
+                <li class="item">- Thức tỉnh mục đích sống</li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
@@ -266,7 +301,7 @@
 
       <!-- START TEAM 
     =================================-->
-      <section id="about-team">
+      <!-- <section id="about-team">
         <div class="container">
           <div class="heading-block">
             <h2 class="title">Đội ngũ của chúng tôi</h2>
@@ -354,8 +389,46 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- END TEAM 
+    =================================-->
+      <!-- START EXPERIENCE 
+    =================================-->
+      <section id="about-exp">
+        <div class="container">
+          <div class="exp-wrapper">
+            <div class="exp-image">
+              <img src="./assets/images/projects/3.jpg" alt="Exp" />
+            </div>
+            <div class="exp-content">
+              <div class="heading-block">
+                <h2 class="title">KINH NGHIỆM</h2>
+                <div class="desc">
+                  <p>
+                    Diễn giả về các chủ đề phát triển bản thân dành cho học sinh
+                    THCS, THPT, sinh viên…
+                  </p>
+                  <p>
+                    8 năm giảng dạy, đào tạo, huấn luyện kỹ năng phát triển bản
+                    thân dành cho học sinh, sinh viên, người trẻ…
+                  </p>
+                  <p>
+                    5 năm đào tạo các kỹ năng phát triển nhân sự và văn hoá
+                    doanh nghiệp như: kỹ năng bán hàng, kỹ năng thuyết trình, kỹ
+                    năng đào tạo, kỹ năng xây dựng đội nhóm…
+                  </p>
+                  <p>
+                    Một số doanh nghiệp đã làm việc, cộng tác trong vai trò đào
+                    tạo: Công ty TNHH Manulife Việt Nam, Vàng bạc Bảo Tín Mạnh
+                    Hải, Hải Phát Land, CMC TS, CMC Consulting, Prudential…
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- END EXPERIENCE 
     =================================-->
 
       <!-- START CLIENTS 
@@ -499,27 +572,25 @@
           </div>
           <div class="form-content">
             <div class="heading-block">
-              <h2 class="title">Đăng ký đào tạo</h2>
-              <p class="desc">
-                Chỉ sử dụng form này khi bạn cần gởi câu hỏi cho Trọng Kha. Để
-                subscribe nhận bài mới, bạn kéo lên đầu trang, nhập email và bấm
-                subscribe nhé!
+              <h2 class="title">
+                CÁC CHƯƠNG TRÌNH <br />
+                ĐÃ THỰC HIỆN
+              </h2>
+            </div>
+            <div class="form-desc">
+              <p>
+                <strong>Diễn thuyết:</strong> Định vị bản thân – Làm chủ tương
+                lai, Thắp sáng khát vọng vươn lên, Yêu thương & Khát vọng, Lòng
+                Biết Ơn, Vượt nghịch cảnh chạm thành công, Tái sinh để tỏa sáng…
+              </p>
+              <p>
+                <strong>Đào tạo:</strong> Làm chủ tư duy tài chính cá nhân, Kỹ
+                năng thuyết trình & Làm chủ sân khấu, Bộ kỹ năng bán hàng chuyên
+                nghiệp, Dịch vụ khách hàng từ tâm, Kỹ năng quản lý thời gian, Kỹ
+                năng thiết lập mục tiêu hiệu quả, Thắp lửa yêu thương, Kỹ năng
+                xây dựng và phát triển đội nhóm…
               </p>
             </div>
-            <form class="main-form">
-              <div class="input-wrapper">
-                <input type="text" placeholder="Họ*" />
-                <input type="text" placeholder="Tên*" />
-              </div>
-              <div class="input-wrapper">
-                <input type="email" placeholder="Email*" />
-                <input type="text" placeholder="Tiêu đề*" />
-              </div>
-              <textarea cols="30" rows="5" placeholder="Nội dung*"></textarea>
-              <button type="submit" class="button button-outline button-l">
-                Tôi tham gia
-              </button>
-            </form>
           </div>
         </div>
       </section>
