--- a/courses-detail.html
+++ b/courses-detail.html
@@ -269,11 +269,7 @@
       <section id="courses-value" class="value">
         <div class="container">
           <div class="heading-block">
-            <h2 class="title">KHÓA HỌC SẼ GIÚP BẠN</h2>
-            <p class="desc">
-              Khoá học thuyết trình có thể giúp bạn phát triển kỹ năng giao tiếp
-              và trình bày thông tin một cách hiệu quả
-            </p>
+            <h2 class="title">TÔI CÓ THỂ GIÚP BẠN</h2>
           </div>
           <div class="value-slider">
             <div class="swiper">
@@ -281,10 +277,7 @@
                 <div class="swiper-slide">
                   <div class="value-item">
                     <div class="icon">
-                      <img
-                        src="./assets/images/icons/checked.svg"
-                        alt="Check"
-                      />
+                      <img src="./assets/images/icons/brain.svg" alt="Check" />
                     </div>
                     <div class="content">
                       <h3 class="title">Kỹ năng giao tiếp</h3>
@@ -298,10 +291,7 @@
                 <div class="swiper-slide">
                   <div class="value-item">
                     <div class="icon">
-                      <img
-                        src="./assets/images/icons/checked.svg"
-                        alt="Check"
-                      />
+                      <img src="./assets/images/icons/famous.svg" alt="Check" />
                     </div>
                     <div class="content">
                       <h3 class="title">Nâng cao tự tin</h3>
@@ -316,10 +306,21 @@
                 <div class="swiper-slide">
                   <div class="value-item">
                     <div class="icon">
-                      <img
-                        src="./assets/images/icons/checked.svg"
-                        alt="Check"
-                      />
+                      <img src="./assets/images/icons/micro.svg" alt="Check" />
+                    </div>
+                    <div class="content">
+                      <h3 class="title">Tư duy logic và phân tích</h3>
+                      <p class="desc">
+                        Phát triển khả năng tư duy logic để xây dựng và trình
+                        bày một luận điểm một cách mạch lạc và thuyết phục.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="value-item">
+                    <div class="icon">
+                      <img src="./assets/images/icons/handls.svg" alt="Check" />
                     </div>
                     <div class="content">
                       <h3 class="title">Tư duy logic và phân tích</h3>
