--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@
       <!-- START BANNER 
     =================================-->
       <section id="home-banner" class="banner">
+        <div class="video">
+          <video
+            src="./assets/video/stage-light.mp4"
+            muted
+            loop
+            autoplay
+          ></video>
+        </div>
         <div class="banner-slider">
           <div class="swiper">
             <div class="swiper-wrapper">
@@ -153,22 +161,34 @@
                 <div class="banner-wrapper">
                   <div class="banner-content">
                     <div class="heading-block">
-                      <span class="badge">Khoá học Kỹ năng</span>
-                      <h2 class="hero-title">
-                        Thuyết trình - <br />làm chủ sân khấu
-                      </h2>
+                      <span class="badge"
+                        >KHÓA HUẤN LUYỆN CHUYÊN SÂU KỸ NĂNG NÓI TRƯỚC CÔNG
+                        CHÚNG</span
+                      >
+                      <h2 class="hero-title">PUBLIC SPEAKING STAR</h2>
+
                       <p class="desc">
-                        Khóa học này nhằm giúp bạn phát triển và nâng cao kỹ
-                        năng thuyết trình, từ việc xây dựng bài thuyết trình đến
-                        trình diễn trên sân khấu một cách tự tin và chuyên
-                        nghiệp.
+                        Bạn khao khát để hình ảnh của mình mỗi lần xuất hiện
+                        luôn tràn đầy tự tin, lôi cuốn và truyền cảm hứng cho
+                        khán giả.
                       </p>
                       <p class="desc">
-                        Khóa học sẽ giới thiệu về việc sử dụng công nghệ và
-                        trình chiếu để tăng cường hiệu quả của bài thuyết trình.
-                        Bạn sẽ học cách sử dụng các công cụ trình chiếu, đồ họa
-                        và hiệu ứng âm thanh để truyền đạt thông điệp một cách
-                        sáng tạo và chuyên nghiệp.
+                        - 'Public Speaking Star' chính là chương trình huấn
+                        luyện giúp bạn trở nên tự tin mạnh mẽ.
+                      </p>
+                      <p class="desc">
+                        - Bạn sẽ được học cách làm chủ sân khấu chuyên nghiệp để
+                        tạo ra trải nghiệm đáng nhớ cho khán giả.
+                      </p>
+                      <p class="desc">
+                        - Bạn sẽ biết cách tạo thông điệp hấp dẫn người nghe.
+                        Giúp bạn phát triển khả năng thuyết phục và tầm ảnh
+                        hưởng
+                      </p>
+                      <p class="desc">
+                        - Bạn sẽ trở thành một bậc thầy trên sân khấu, giúp bạn
+                        có cơ hội thăng tiến ở các vị trí lãnh đạo cao hơn và mở
+                        ra nhiều hướng phát triển mới trong sự nghiệp.
                       </p>
                       <a
                         href="#"
@@ -190,22 +210,34 @@
                 <div class="banner-wrapper">
                   <div class="banner-content">
                     <div class="heading-block">
-                      <span class="badge">Khoá học Kỹ năng</span>
-                      <h2 class="hero-title">
-                        Thuyết trình - <br />làm chủ sân khấu
-                      </h2>
+                      <span class="badge"
+                        >KHÓA HUẤN LUYỆN CHUYÊN SÂU KỸ NĂNG NÓI TRƯỚC CÔNG
+                        CHÚNG</span
+                      >
+                      <h2 class="hero-title">PUBLIC SPEAKING STAR</h2>
+
                       <p class="desc">
-                        Khóa học này nhằm giúp bạn phát triển và nâng cao kỹ
-                        năng thuyết trình, từ việc xây dựng bài thuyết trình đến
-                        trình diễn trên sân khấu một cách tự tin và chuyên
-                        nghiệp.
+                        Bạn khao khát để hình ảnh của mình mỗi lần xuất hiện
+                        luôn tràn đầy tự tin, lôi cuốn và truyền cảm hứng cho
+                        khán giả.
                       </p>
                       <p class="desc">
-                        Khóa học sẽ giới thiệu về việc sử dụng công nghệ và
-                        trình chiếu để tăng cường hiệu quả của bài thuyết trình.
-                        Bạn sẽ học cách sử dụng các công cụ trình chiếu, đồ họa
-                        và hiệu ứng âm thanh để truyền đạt thông điệp một cách
-                        sáng tạo và chuyên nghiệp.
+                        - 'Public Speaking Star' chính là chương trình huấn
+                        luyện giúp bạn trở nên tự tin mạnh mẽ.
+                      </p>
+                      <p class="desc">
+                        - Bạn sẽ được học cách làm chủ sân khấu chuyên nghiệp để
+                        tạo ra trải nghiệm đáng nhớ cho khán giả.
+                      </p>
+                      <p class="desc">
+                        - Bạn sẽ biết cách tạo thông điệp hấp dẫn người nghe.
+                        Giúp bạn phát triển khả năng thuyết phục và tầm ảnh
+                        hưởng
+                      </p>
+                      <p class="desc">
+                        - Bạn sẽ trở thành một bậc thầy trên sân khấu, giúp bạn
+                        có cơ hội thăng tiến ở các vị trí lãnh đạo cao hơn và mở
+                        ra nhiều hướng phát triển mới trong sự nghiệp.
                       </p>
                       <a
                         href="#"
@@ -227,22 +259,34 @@
                 <div class="banner-wrapper">
                   <div class="banner-content">
                     <div class="heading-block">
-                      <span class="badge">Khoá học Kỹ năng</span>
-                      <h2 class="hero-title">
-                        Thuyết trình - <br />làm chủ sân khấu
-                      </h2>
+                      <span class="badge"
+                        >KHÓA HUẤN LUYỆN CHUYÊN SÂU KỸ NĂNG NÓI TRƯỚC CÔNG
+                        CHÚNG</span
+                      >
+                      <h2 class="hero-title">PUBLIC SPEAKING STAR</h2>
+
                       <p class="desc">
-                        Khóa học này nhằm giúp bạn phát triển và nâng cao kỹ
-                        năng thuyết trình, từ việc xây dựng bài thuyết trình đến
-                        trình diễn trên sân khấu một cách tự tin và chuyên
-                        nghiệp.
+                        Bạn khao khát để hình ảnh của mình mỗi lần xuất hiện
+                        luôn tràn đầy tự tin, lôi cuốn và truyền cảm hứng cho
+                        khán giả.
                       </p>
                       <p class="desc">
-                        Khóa học sẽ giới thiệu về việc sử dụng công nghệ và
-                        trình chiếu để tăng cường hiệu quả của bài thuyết trình.
-                        Bạn sẽ học cách sử dụng các công cụ trình chiếu, đồ họa
-                        và hiệu ứng âm thanh để truyền đạt thông điệp một cách
-                        sáng tạo và chuyên nghiệp.
+                        - 'Public Speaking Star' chính là chương trình huấn
+                        luyện giúp bạn trở nên tự tin mạnh mẽ.
+                      </p>
+                      <p class="desc">
+                        - Bạn sẽ được học cách làm chủ sân khấu chuyên nghiệp để
+                        tạo ra trải nghiệm đáng nhớ cho khán giả.
+                      </p>
+                      <p class="desc">
+                        - Bạn sẽ biết cách tạo thông điệp hấp dẫn người nghe.
+                        Giúp bạn phát triển khả năng thuyết phục và tầm ảnh
+                        hưởng
+                      </p>
+                      <p class="desc">
+                        - Bạn sẽ trở thành một bậc thầy trên sân khấu, giúp bạn
+                        có cơ hội thăng tiến ở các vị trí lãnh đạo cao hơn và mở
+                        ra nhiều hướng phát triển mới trong sự nghiệp.
                       </p>
                       <a
                         href="#"
@@ -306,23 +350,38 @@
             <div class="about-content">
               <div class="heading-block">
                 <h2 class="title">Về Trọng Kha</h2>
-                <p class="desc">
-                  Franchise Expert, Entrepreneur & Angel Investor - Chuyên gia
-                  nhượng quyền, Doanh nhân & Nhà đầu tư thiên thần
-                </p>
               </div>
               <p class="text">
-                Trọng Kha tốt nghiệp MBA tại Úc. Cô đã từng giữ các vị trí cao
-                cấp về quản trị thương hiệu, bán lẻ, nhượng quyền & phát triển
-                kinh doanh cho các tập đoàn lớn tại các khu vực thị trường châu
-                Á, Trung đông, châu Phi & Đông Âu.
+                - Doanh nhân, Diễn Giả, Nhà huấn luyện kỹ năng nói trước công
+                chúng.
               </p>
               <p class="text">
-                Phi Vân tham gia vào nhiều dự án chính phủ về phát triển doanh
-                nghiệp & kinh tế sáng tạo tại Đông Nam Á, hiện là cố vấn đề án
-                844 về phát triển hệ sinh thái khởi nghiệp Việt Nam, chủ tịch
-                mạng lưới đầu tư thiên thần Đông Nam Á, và đại diện cấp cao Việt
-                Nam tại diễn đàn đầu tư thiên thần toàn cầu.
+                - Nhà Sáng Lập – Chủ Tịch Công Ty TNHH Dịch Vụ Tổ Chức Sự Kiện
+                và Tư Vấn Phát Triển ITOSA VIETNAM
+              </p>
+              <p class="text">
+                - CO-Founder Công ty TNHH Du Lịch Và Thương Mại VIETLOTUS Travel
+              </p>
+              <p class="text">
+                - CO-Founder Câu Lạc Bộ S20 – Vì Thế Trẻ Việt Nam Tốt Hơn Mỗi
+                Ngày
+              </p>
+              <p class="text">
+                - Chủ Nhiệm Câu Lạc Bộ Những Người Yêu Sách – Phố Sách Hà Nội
+              </p>
+              <p class="text">Học Vấn:</p>
+              <p class="text">- Tốt nghiệp loại Giỏi – Đại học Hùng Vương</p>
+              <p class="text">
+                - Tốt nghiệp khoá đào tạo giảng viên kỹ năng sống tại Viện khoa
+                học công nghệ giáo dục.
+              </p>
+              <p class="text">
+                - Tốt nghiệp khoá đào tạo Trainer tại Viện khoa học công nghệ
+                giáo dục.
+              </p>
+              <p class="text">- Tốt nghiệp Trainer tại Bond Training.</p>
+              <p class="text">
+                - Tốt nghiệp MC tại Trung tâm đào tạo MC Sukha.
               </p>
               <a href="#" title="Xem thêm" class="button button-solid button-m"
                 >Xem thêm</a
@@ -360,9 +419,9 @@
       </section>
       <!-- END VIDEO 
     =================================-->
-      <!-- START COURSES 
+      <!-- START VIDEO 
     =================================-->
-      <div id="home-courses" class="courses">
+      <div id="home-video-list" class="video">
         <div class="container">
           <div class="heading-block">
             <h2 class="title">Các khoá học của chúng tôi</h2>
@@ -371,108 +430,79 @@
               của bạn. Xem video để biết thêm chi tiết về khoá học
             </p>
           </div>
-          <div class="courses-group">
-            <div class="courses-item">
+          <div class="video-group">
+            <div class="video-item">
               <div class="image">
                 <img src="./assets/images/courses/1.jpg" alt="Course" />
               </div>
               <div class="content">
-                <a href="#" title="Diễn thuyết theo chủ đề" class="title"
-                  >Diễn thuyết theo chủ đề</a
+                <a
+                  href="#"
+                  title="TẠI SAO PHẢI TRANG BỊ KỸ NĂNG NÓI TRƯỚC CÔNG CHÚNG"
+                  class="title"
+                  >TẠI SAO PHẢI TRANG BỊ KỸ NĂNG NÓI TRƯỚC CÔNG CHÚNG</a
                 >
-                <p class="desc">
-                  Chào bạn! Với mong muốn tạo ra những chương trình diễn thuyết,
-                  truyền cảm hứng tới thế hệ trẻ ở độ tuổi 15-30. Giúp các...
-                </p>
               </div>
             </div>
-            <div class="courses-item">
-              <span class="tag"> Coming soon </span>
+            <div class="video-item">
+              <div class="image">
+                <img src="./assets/images/courses/5.jpg" alt="Course" />
+              </div>
+              <div class="content">
+                <a
+                  href="#"
+                  title="KỸ NĂNG BIẾN TÀI NĂNG THÀNH TÀI SẢN"
+                  class="title"
+                  >KỸ NĂNG BIẾN TÀI NĂNG THÀNH TÀI SẢN</a
+                >
+              </div>
+            </div>
+            <div class="video-item">
               <div class="image">
                 <img src="./assets/images/courses/2.jpg" alt="Course" />
               </div>
               <div class="content">
-                <a href="#" title="Tài chính cá nhân" class="title"
-                  >Tài chính cá nhân</a
+                <a href="#" title="NGHỆ THUẬT TẠO DỰNG" class="title"
+                  >MỐI QUAN HỆ CHẤT LƯỢNG</a
                 >
-                <p class="desc">
-                  “Làm chủ tư duy tài chính cá nhân” dành cho các bạn trẻ. Khóa
-                  học này nhằm giúp các bạn trẻ hiểu và áp dụng...
-                </p>
               </div>
             </div>
-            <div class="courses-item">
+            <div class="video-item">
               <div class="image">
                 <img src="./assets/images/courses/3.jpg" alt="Course" />
               </div>
               <div class="content">
                 <a
                   href="#"
-                  title="Thuyết trình – làm chủ sân khấu"
+                  title="KỸ NĂNG XÂY DỰNG THƯƠNG HIỆU CHUYÊN GIA"
                   class="title"
-                  >Thuyết trình – làm chủ sân khấu</a
+                  >KỸ NĂNG XÂY DỰNG THƯƠNG HIỆU CHUYÊN GIA</a
                 >
-                <p class="desc">
-                  Chào bạn! Với mong muốn tạo ra những chương trình diễn thuyết,
-                  truyền cảm hứng tới thế hệ trẻ ở độ tuổi 15-30. Giúp các...
-                </p>
               </div>
             </div>
-            <div class="courses-item">
+            <div class="video-item">
               <div class="image">
                 <img src="./assets/images/courses/4.jpg" alt="Course" />
               </div>
               <div class="content">
-                <a href="#" title="Chương trình huấn luyện 1 – 1" class="title"
-                  >Chương trình huấn luyện 1 – 1</a
-                >
-                <p class="desc">
-                  Chào bạn! Với mong muốn tạo ra những chương trình diễn thuyết,
-                  truyền cảm hứng tới thế hệ trẻ ở độ tuổi 15-30. Giúp các...
-                </p>
-              </div>
-            </div>
-            <div class="courses-item">
-              <div class="image">
-                <img src="./assets/images/courses/5.jpg" alt="Course" />
-              </div>
-              <div class="content">
-                <a href="#" title="Xây dựng văn hóa doanh nghiệp" class="title"
-                  >Xây dựng văn hóa doanh nghiệp</a
-                >
-                <p class="desc">
-                  Chào bạn! Với mong muốn tạo ra những chương trình diễn thuyết,
-                  truyền cảm hứng tới thế hệ trẻ ở độ tuổi 15-30. Giúp các...
-                </p>
-              </div>
-            </div>
-            <div class="courses-item">
-              <div class="image">
-                <img src="./assets/images/courses/6.jpg" alt="Course" />
-              </div>
-              <div class="content">
                 <a
                   href="#"
-                  title="Lãnh đạo tự thân – chuyển hóa..."
+                  title="TƯ DUY TÀI CHÍNH CÁ NHÂN QUAN TRỌNG NHƯ THẾ NÀO?"
                   class="title"
-                  >Lãnh đạo tự thân – chuyển hóa...</a
+                  >TƯ DUY TÀI CHÍNH CÁ NHÂN QUAN TRỌNG NHƯ THẾ NÀO?</a
                 >
-                <p class="desc">
-                  Chào bạn! Với mong muốn tạo ra những chương trình diễn thuyết,
-                  truyền cảm hứng tới thế hệ trẻ ở độ tuổi 15-30. Giúp các...
-                </p>
               </div>
             </div>
           </div>
           <a
             href="#"
-            title="Xem toàn bộ khoá học"
+            title="Xem thêm video"
             class="button button-outline button-m"
-            >Xem toàn bộ khoá học</a
+            >Xem thêm video</a
           >
         </div>
       </div>
-      <!-- END COURSES 
+      <!-- END VIDEO 
     =================================-->
       <!-- START CLIENTS 
     =================================-->
@@ -753,32 +783,12 @@
     =================================-->
     <footer id="footer">
       <div class="container">
-        <ul class="social-list">
-          <li class="social-item">
-            <a href="#" title="Facebook" class="icon">
-              <img src="./assets/images/icons/fb-1.svg" alt="Facebook" />
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="#" title="Youtube" class="icon">
-              <img src="./assets/images/icons/yt-1.svg" alt="Youtube" />
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="#" title="Facebook" class="icon">
-              <img src="./assets/images/icons/fb-1.svg" alt="Facebook" />
-            </a>
-          </li>
-        </ul>
         <ul class="footer-link-list">
           <li class="footer-link-item">
-            <a href="#" title="Giới thiệu">Giới thiệu</a>
+            <a href="#" title="Về trọng kha">Về trọng kha</a>
           </li>
           <li class="footer-link-item">
             <a href="#" title="Khoá học">Khoá học</a>
-          </li>
-          <li class="footer-link-item">
-            <a href="#" title="podcasts">podcasts</a>
           </li>
           <li class="footer-link-item">
             <a href="#" title="Books">Books</a>
@@ -787,10 +797,41 @@
             <a href="#" title="Blog">Blog</a>
           </li>
           <li class="footer-link-item">
-            <a href="#" title="Liên hệ">Liên hệ</a>
-          </li>
-          <li class="footer-link-item">
             <a href="#" title="Đăng ký">Đăng ký</a>
+          </li>
+        </ul>
+        <ul class="social-list">
+          <li class="social-item">
+            <a href="#" title="Facebook">
+              <div class="icon fb">
+                <img src="./assets/images/icons/fb-3.svg" alt="Facebook" />
+              </div>
+              <span class="num"> 10.8K </span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="#" title="Youtube">
+              <div class="icon yt">
+                <img src="./assets/images/icons/yt-2.svg" alt="Youtube" />
+              </div>
+              <span class="num"> 6.3K </span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="#" title="Zalo">
+              <div class="icon zl">
+                <img src="./assets/images/icons/zalo.svg" alt="Zalo" />
+              </div>
+              <span class="num"> 5K </span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="#" title="Tiktok">
+              <div class="icon tt">
+                <img src="./assets/images/icons/tiktok.svg" alt="Tiktok" />
+              </div>
+              <span class="num"> 15.4K </span>
+            </a>
           </li>
         </ul>
         <p class="copyrights">
