--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             muted
             loop
             autoplay
+            playsinline
           ></video>
         </div>
         <div class="banner-slider">
