--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
                         >KHÓA HUẤN LUYỆN CHUYÊN SÂU KỸ NĂNG NÓI TRƯỚC CÔNG
                         CHÚNG</span
                       >
-                      <h2 class="hero-title">PUBLIC SPEAKING STAR</h2>
+                      <h2 class="hero-title" data-attr="PUBLIC SPEAKING STAR">
+                        PUBLIC SPEAKING STAR
+                      </h2>
 
                       <p class="desc">
                         Bạn khao khát để hình ảnh của mình mỗi lần xuất hiện
