--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         >KHÓA HUẤN LUYỆN CHUYÊN SÂU KỸ NĂNG NÓI TRƯỚC CÔNG
                         CHÚNG</span
                       >
-                      <h2 class="hero-title" data-attr="PUBLIC SPEAKING STAR">
+                      <h2 class="hero-title" data-text="PUBLIC SPEAKING STAR">
                         PUBLIC SPEAKING STAR
                       </h2>
 
@@ -352,7 +352,7 @@
             </div>
             <div class="about-content">
               <div class="heading-block">
-                <h2 class="title">Về Trọng Kha</h2>
+                <h2 class="title" data-text="Về Trọng Kha">Về Trọng Kha</h2>
               </div>
               <p class="text">
                 - Doanh nhân, Diễn Giả, Nhà huấn luyện kỹ năng nói trước công
@@ -400,7 +400,9 @@
       <section id="home-video">
         <div class="container">
           <div class="heading-block">
-            <h2 class="title">Định vị bản thân, làm chủ tương lai</h2>
+            <h2 class="title" data-text="Định vị bản thân, làm chủ tương lai">
+              Định vị bản thân, làm chủ tương lai
+            </h2>
             <p class="desc">
               Tự đặt câu hỏi - bước đầu tiên trên hành trình phát triển bản thân
               của bạn. Xem video để biết thêm chi tiết về khoá học
